syntax = "proto3";

package auth;

option go_package = "./proto/auth";
//protoc --go_out=. --go-grpc_out=. proto/auth.proto
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool status = 1;
  string message = 2;
  AccessToken data = 3;
}

message AccessToken {
  string access_token = 1;
}